# theria

./: .gitignore  LICENSE  README.md  environment.gpu.yml  environment.yml  pyproject.toml  pytest.ini
docs/: STATUS.md  phase10.md  phase12.md  phase9_backward.md  phase9_hvp.md  phase9_jvp.md  phase9_operator.md
docs/design/: operator_contracts.md
docs/theory/: attention_autograd.md  hvp_jvp_primer.md  maml_derivation.md  softmax_jvp.md
examples/: README.md  minimal_decoder_transformer.py
experiments/phase10/: README.md  bench.csv  phase10_summary.tsv  phase10_timing.csv  phase10_timing_innerdepth.csv  stress_rel_diff_triton.csv
experiments/phase11/: README.md
experiments/phase12/: README.md
scripts/: bench_sdpa.py  smoke_sdpa.py
tests/: _graph_inspect.py  conftest.py  test_attention_boundary.py  test_attention_boundary_gpu.py  test_custom_attention_hvp.py  test_custom_attention_jvp.py  test_jvp_contract_guard.py  test_maml_full_vs_fo.py  test_maml_inner_decreases_loss.py  test_maml_smoke.py  test_reference_attention_hvp.py  test_reference_jvp.py  test_sdpa_gradcheck.py  test_sdpa_hvp.py  test_sdpa_reference_backward.py  test_triton_double_backward.py  test_triton_fast_relaxed.py  test_triton_forward_matches_reference.py  test_triton_fused_backward.py  test_triton_fused_backward_parity.py  test_triton_fused_forward.py  test_triton_fused_hvp_sanity.py  test_triton_fused_jvp.py  test_triton_gradcheck.py  test_triton_qk.py  test_triton_sdpa_dk.py  test_triton_sdpa_dq.py  test_triton_sdpa_dv.py  test_triton_sdpa_jvp.py
theria/: __init__.py
(+39 files in other folders)
