[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "theria"
version = "0.0.0"
description = "Differentiable attention operators with higher-order gradient support"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]